--- a/OAuthTestApp/package.json
+++ b/OAuthTestApp/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "googleapis": "^128.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0"
   },
   "devDependencies": {
