--- a/DownLoader/package.json
+++ b/DownLoader/package.json
@@ -8,24 +8,31 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["youtube", "downloader", "oauth", "express", "mongodb"],
+  "keywords": [
+    "youtube",
+    "downloader",
+    "oauth",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.5.0",
+    "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "fs-extra": "^11.1.1",
+    "helmet": "^7.0.0",
     "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "open": "^10.2.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "express-session": "^1.17.3",
-    "connect-mongo": "^5.0.0",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "node-cron": "^3.0.2",
-    "axios": "^1.5.0",
-    "path": "^0.12.7",
-    "fs-extra": "^11.1.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
